--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
 /*.d
 /*.o
-/*-ephemerons
-/*-mt-gcbench
-/*-quads
+/*.bdw
+/*.semi
+/*.whippet
+/*.generational-whippet
+/*.parallel-whippet
+/*.parallel-generational-whippet
+/*.stack-conservative-whippet
+/*.stack-conservative-generational-whippet
+/*.stack-conservative-parallel-whippet
+/*.stack-conservative-parallel-generational-whippet
+/*.heap-conservative-whippet
+/*.heap-conservative-generational-whippet
+/*.heap-conservative-parallel-whippet
+/*.heap-conservative-parallel-generational-whippet
